istio/ambient/waypoint/envoyfilter/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ignore-path
spec:
  targetRefs:
    - kind: Service
      name: httpbin
  configPatches:
    - applyTo: ROUTE_CONFIGURATION
      match:
        context: WAYPOINT
        waypoint: {}
      patch:
        operation: MERGE
        value:
          ignorePathParametersInPathMatching: true
